# ChangeLog for dev-util/mingw-runtime
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/mingw-runtime/ChangeLog,v 1.17 2009/11/05 23:03:51 vapier Exp $

  05 Nov 2009; Mike Frysinger <vapier@gentoo.org> mingw-runtime-3.15.2.ebuild:
  Mark amd64/x86 stable.

*mingw-runtime-3.15.2 (10 Jan 2009)

  10 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +mingw-runtime-3.15.2.ebuild:
  Version bump.

  10 Jan 2009; Mike Frysinger <vapier@gentoo.org> mingw-runtime-3.15.1.ebuild:
  Mark amd64/x86 stable.

*mingw-runtime-3.15.1 (05 Oct 2008)

  05 Oct 2008; Mike Frysinger <vapier@gentoo.org>
  +mingw-runtime-3.15.1.ebuild:
  Version bump.

  17 Sep 2008; Mike Frysinger <vapier@gentoo.org>
  files/mingw-runtime-3.12-DESTDIR.patch:
  Tweak patch to apply nicely to multiple mingw versions #237085 by Richard
  Li.

*mingw-runtime-3.15 (08 Sep 2008)

  08 Sep 2008; Mike Frysinger <vapier@gentoo.org>
  +mingw-runtime-3.15.ebuild:
  Version bump.

  02 Jul 2008; Mike Frysinger <vapier@gentoo.org> mingw-runtime-3.14.ebuild:
  Workaround portage IUSE deficiencies by adding the expanded
  crosscompile_opts.

*mingw-runtime-3.14 (20 Jan 2008)

  20 Jan 2008; Mike Frysinger <vapier@gentoo.org>
  +mingw-runtime-3.14.ebuild:
  Version bump #205990 by Dennis Schridde.

*mingw-runtime-3.13 (06 Oct 2007)

  06 Oct 2007; Mike Frysinger <vapier@gentoo.org>
  +mingw-runtime-3.13.ebuild:
  Version bump #192643 by Dennis Schridde.

  24 Jun 2007; Piotr Jaroszyński <peper@gentoo.org>
  mingw-runtime-3.10.ebuild, mingw-runtime-3.11.ebuild,
  mingw-runtime-3.11_p20061202.ebuild:
  (QA) Don't use KEYWORDS="-*". bug #160519.

*mingw-runtime-3.12 (07 Apr 2007)

  07 Apr 2007; Mike Frysinger <vapier@gentoo.org>
  +files/mingw-runtime-3.12-DESTDIR.patch, +mingw-runtime-3.12.ebuild:
  Version bump #173120 by Dennis Schridde.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml: