@@ -1,7 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX mingw-runtime-3.12-DESTDIR.patch 577 RMD160 2747b5cff36430c6a6dc8b283e85cc4ee4d0e9b9 SHA1 1683bc0ef3e98a7fff4a7ec798730ec582445045 SHA256 aad3d91b2b9340e11527d068160b87f47d94f9fc1076b976086224a194cafe67
 DIST mingwrt-3.15.1-mingw32-src.tar.gz 427412 RMD160 a23cb59729fe8aa9ca7bea5299a54e479e60c9da SHA1 26d7a1f45d379faebe76adcf6b052e0ef634c70d SHA256 4f4d19f3e15fdf00957932211be609b6bf4e689ad5938ce7bff666a638bde0e7
 DIST mingwrt-3.15.2-mingw32-src.tar.gz 441398 RMD160 5101a5f77cefd310bffd0e397005b85762bac32c SHA1 6e7079968a3a7a819a7dd482950eddd6483c0ef6 SHA256 64d7c31354d318ec2085e39e724287c78742a66302fd0b27dab7a3f705d5c54d
-EBUILD mingw-runtime-3.15.1.ebuild 2179 RMD160 b90d9847ff3011fc5cdd75f9ef1e15f964928a3b SHA1 6588b58a8e89b2d628edce395d5c9902b5f7d200 SHA256 ba1b64a9b147b5620058afa18bb886379a97c0edb7b4d1dae5a4454e8fdc70fa
-EBUILD mingw-runtime-3.15.2.ebuild 2181 RMD160 bb13da4da76f92ba644e3dce672904cfd2075490 SHA1 a83d4dab49b46bd921530e48bd020b8180781c93 SHA256 edd1dba26895168be7769cd836574b8f7f4489e709d86924f92a1b13fc23f2dc
-MISC ChangeLog 2711 RMD160 5e2d4c05cf4346a9d766e1a13b9143a4edb971ab SHA1 7b175659da02caee5b5ff9658c0eb075e1549e19 SHA256 f78d2304be2ec92610bf06784759f539174d4f9bf280ca0dbc987d9392e86bf1
+DIST mingwrt-3.16-mingw32-src.tar.gz 381251 RMD160 0c8ff2e00309c9c6ce472e0a317e381b034fc641 SHA1 9bc72640404b87e4c7a31d15c24600e516285e59 SHA256 68cc000f3efd7c5437d29c86e09e2cb4e89aafdff4ac6194fb3c7d92f6e09266
+EBUILD mingw-runtime-3.15.1.ebuild 2165 RMD160 40ed8f62e852471450cf138f3cae70f6f484b46d SHA1 7f1e2132eb7069cee462370561cdb259b948167c SHA256 a22efc794db1d76fb310fc68f58e61b0048bc298f54a76f9d4b38014cd2fc6eb
+EBUILD mingw-runtime-3.15.2.ebuild 2165 RMD160 937e45247f9e419f08cfc06f072135cc416c65c0 SHA1 f06c75c414ab1d01d3cc3480874941d6b58cbaf4 SHA256 bf85aba86ad852ef101aa8a24e84ad4f8b66708259c9d52ff2208f9264c90691
+EBUILD mingw-runtime-3.16.ebuild 2165 RMD160 c11b020b6a1bec347f7a4c23d29263907290773c SHA1 81799f1dc4f055e27d8b851fc11a2113610c5902 SHA256 a94f2e9c755379feaaa2084e50c29a8555f498c3fec52ad4ea0a6875a6145b08
+MISC ChangeLog 2973 RMD160 d535e45069d0cb2a6f97383260731c28c3e3fcb5 SHA1 1abc84fc62b69dda2683c07aefec9fe8aa70b693 SHA256 be05269a1cfc0e4d6046d4abd1764cf90360108692c4c5566856cb2f85b19e34
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAkrzWk0ACgkQlPl3HsVfCDoHQQCfb66bcbtXrm9Er2HX/ywUN0wM
+YL8AnibQwv4bY1dnBwBxTlJPYJGJyI0F
+=bGO9
+-----END PGP SIGNATURE-----
