@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/mingw-runtime
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/mingw-runtime/ChangeLog,v 1.17 2009/11/05 23:03:51 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/mingw-runtime/ChangeLog,v 1.18 2009/11/05 23:04:18 vapier Exp $
+
+*mingw-runtime-3.16 (05 Nov 2009)
+
+  05 Nov 2009; Mike Frysinger <vapier@gentoo.org> +mingw-runtime-3.16.ebuild:
+  Version bump #291981 by Rafał Mużyło.
 
   05 Nov 2009; Mike Frysinger <vapier@gentoo.org> mingw-runtime-3.15.2.ebuild:
   Mark amd64/x86 stable.
